--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<name>Christian Gendreau</name>
 		</developer>
 	</developers>
+	
+	<repositories>
+		<repository>
+			<id>snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</repository>
+	</repositories>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
