--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
-			<scope>runtime</scope>
+			<scope>provided</scope>
 		</dependency>
 		<!-- Apache lang3 -->
 		<dependency>
