--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
 		<repository>
 			<id>snapshots</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 
