--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,14 @@
 	
 	<repositories>
 		<repository>
-			<id>snapshots</id>
+			<id>snapshots-repo</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 	</repositories>
 
