--- a/canadensys-web-core/pom.xml
+++ b/canadensys-web-core/pom.xml
@@ -104,6 +104,13 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Spring test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
