--- a/canadensys-web-core/pom.xml
+++ b/canadensys-web-core/pom.xml
@@ -54,7 +54,7 @@
 		<maven.compiler.source>6</maven.compiler.source>
 		<maven.compiler.target>6</maven.compiler.target>
 		
-		<canadensys-core.version>1.7-SNAPSHOT</canadensys-core.version>
+		<canadensys-core.version>1.8</canadensys-core.version>
 		<freemarker.version>2.3.20</freemarker.version>
 		<spring.version>3.2.8.RELEASE</spring.version>
 		<reflections.version>0.9.9-RC1</reflections.version>
