--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>net.canadensys</groupId>
 	<artifactId>canadensys-web-core-parent</artifactId>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Canadensys web core Parent Project</name>
 	<description>The Canadensys web core library</description>
