--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
 		<url>git@github.com:Canadensys/canadensys-web-core.git</url>
 		<connection>scm:git:git@github.com:Canadensys/canadensys-web-core.git</connection>
 		<developerConnection>scm:git:git@github.com:Canadensys/canadensys-web-core.git</developerConnection>
-	</scm>
+	  <tag>HEAD</tag>
+  </scm>
 
 	<developers>
 		<developer>
@@ -97,6 +98,7 @@
 					<serverId>ossrh</serverId>
 					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -131,7 +133,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.4</version>
+				<version>1.5</version>
 				<executions>
 					<execution>
 						<id>sign-artifacts</id>
