--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>net.canadensys</groupId>
 	<artifactId>canadensys-web-core-parent</artifactId>
-	<version>0.8-SNAPSHOT</version>
+	<version>0.8</version>
 	<packaging>pom</packaging>
 	<name>Canadensys web core Parent Project</name>
 	<description>The Canadensys web core library</description>
