--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-install: mvn clean install
+install: mvn -Dhttps.protocols=TLSv1.2 clean install
 matrix:
  include:
   - jdk: oraclejdk8
